--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -9564,12 +9564,96 @@
    year = {2005}
 }
 
-@article{steigele06,
-  author =		 {Stephan Steigele and Peter F. Stadler and Kay Nieselt},
-  title =		 {Structured {RNA} Motifs in the Yeast Genome},
-  journal =		 {},
-  volume =		 { },
-  pages =		 { },
-  year =		 {},
-  note =		 {in preparation},
-}
+
+
+@Article{Steigele:07,
+  author =       {Steigele, S and Huber, W and Stocsits, C and
+                 Stadler, P F and Nieselt, K},
+  title =        {Comparative analysis of structured {RNAs} in
+                 S. cerevisiae indicates a multitude of different
+                 functions.},
+  journal =      {BMC Biol},
+  year =         {2007},
+  month =        {},
+  number =       {},
+  volume =       {5},
+  pages =        {25},
+  doi =          {10.1186/1741-7007-5-25},
+  abstract =     {Non-coding RNAs (ncRNAs) are an emerging focus for
+                 both computational analysis and experimental
+                 research, resulting in a growing number of novel,
+                 non-protein coding transcripts with often unknown
+                 functions. Whole genome screens in higher
+                 eukaryotes, for example, provided evidence for a
+                 surprisingly large number of ncRNAs. To supplement
+                 these searches, we performed a computational
+                 analysis of seven yeast species and searched for
+                 new ncRNAs and RNA motifs.},
+  PMID =         {17577407}}
+
+
+
+@Article{Gruber:2010,
+  author =       {Gruber, A R and Findeiß, S and Washietl, S and
+                 Hofacker, I L and Stadler, P F},
+  title =        {{RNAz} 2.0: IMPROVED NONCODING {RNA} DETECTION.},
+  journal =      {Pac Symp Biocomput},
+  year =         {2010},
+  month =        {},
+  number =       {},
+  volume =       {15},
+  pages =        {69-79},
+  doi =          {},
+  abstract =     {RNAz is a widely used software package for de novo
+                 detection of structured noncoding RNAs in
+                 comparative genomics data. Four years of
+                 experience have not only demonstrated the
+                 applicability of the approach, but also helped us
+                 to identify limitations of the current
+                 implementation. RNAz 2.0 provides significant
+                 improvements in two respects: (1) The accuracy is
+                 increased by the systematic use of dinucleotide
+                 models. (2) Technical limitations of the previous
+                 version, such as the inability to handle
+                 alignments with more than six sequences, are
+                 overcome by increased training data and the usage
+                 of an entropy measure to represent sequence
+                 similarities. RNAz 2.0 shows a significantly lower
+                 false discovery rate on a dinucleotide background
+                 model than the previous version. Separate models
+                 for structural alignments provide an additional
+                 way to increase the predictive power. RNAz is open
+                 source software and can be obtained free of charge
+                 at:
+                 http://www.tbi.univie.ac.at/\textasciitildewash/RNAz/},
+  PMID =         {19908359}}
+
+@Article{Findeiss:2011,
+  author =       {Findeiß, S and Engelhardt, J and Prohaska, S J and
+                 Stadler, P F},
+  title =        {Protein-coding structured {RNAs}: A computational
+                 survey of conserved {RNA} secondary structures
+                 overlapping coding regions in drosophilids.},
+  journal =      {Biochimie},
+  year =         {2011},
+  month =        {Nov},
+  number =       {11},
+  volume =       {93},
+  pages =        {2019-2023},
+  doi =          {10.1016/j.biochi.2011.07.023},
+  abstract =     {Functional RNA elements can be embedded also
+                 within exonic sequences coding for functional
+                 proteins. While not uncommon in viruses, only a
+                 few examples of this type have been described in
+                 some detail for eukaryotic genomes. Here we use
+                 RNAz and RNAcode, two comparative genomics methods
+                 that measure signatures of stabilizing selection
+                 acting on RNA secondary structure and peptide
+                 sequence, resp., to survey the fruit fly
+                 genomes. We estimate that there might be on the
+                 order of 1000 loci that are subject to dual
+                 selection pressure. The used genome-wide screens
+                 also expose the limitations of the currently
+                 available methods.},
+  PMID =         {21835221}}
+
